--- a/.env.prod
+++ b/.env.prod
@@ -5,7 +5,7 @@ APP_DEBUG=false
 APP_URL=http://q.trainstation.com.ph
 TZ=Asia/Manila
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
